# ai-mcu-auto-debug

./: .gitattributes  .gitignore  AGENTS.md  LICENSE  README.md  README_EN.md  pyproject.toml
ai_mcu_debug/: __init__.py  agent_bootstrap.py  api.py  audit.py  audit_log.py  bootstrap.py  capability_audit.py  cli.py  command_log.py  config.py  connection_diagnostics.py  diagnostics.py  doctor.py  elf_check.py  factory.py  hardware_identity.py  interfaces.py  local_config.py  mcp_config.py  mcp_server.py  mcp_smoke.py  models.py  nonvision_acceptance.py  probe_scan.py  replay.py  serial_log.py  skill_bootstrap.py  skill_install.py  target_validation.py  vision.py  workflow_plan.py  workflow_run.py  workspace.py
ai_mcu_debug/adapters/: __init__.py  gdb_remote.py
ai_mcu_debug/knowledge/: __init__.py  compare.py  context_builder.py  doc_fetch.py  doc_repo.py  errata.py  svd.py  (+5 more)
configs/: lab_bench.yaml
docs/: AGENT_QUICKSTART.md  AI_AGENT_USAGE.md  AI_LAB_MODEL.md  FIRST_STAGE_HARDWARE_ACCEPTANCE.md  GOLDEN_SUITES.md  REPORTS.md  SECOND_STAGE_KNOWLEDGE_BASE.md  STM32F103RCT6_DEBUG_RECORD.md  STM32F103_DEBUG_RECORD.md  VERIFIED_BOARDS.md
examples/: build.cmake.codex-repair.json  build.cmake.json  build.stm32f103.json  build.stm32f103rct6.json  debug.target.cmsis-dap.stm32f103rct6.json  debug.target.jlink.json  debug.target.json  debug.target.openocd.json  debug.target.openocd.local.json  debug.target.pyocd.json  debug.target.pyocd.stm32f103rct6.json  debug_sequence.json  debug_task.esp32c3-supermini.json  debug_task.json  debug_task.stm32f103rct6.json  mcu_context.stm32f103.json  mcu_context.stm32f103rct6.json
examples/firmware/stm32f103_blinky/: CMakeLists.txt  arm-gcc-toolchain.cmake  linker.ld  linker.stm32f103rct6.ld
examples/firmware/stm32f103_blinky/src/: main.c  startup_stm32f103.c
scripts/: cross_workspace_acceptance.py  first_stage_acceptance.py
tests/: __init__.py  test_acceptance.py  test_agent_bootstrap.py  test_ai_debug.py  test_api.py  test_audit.py  test_bootstrap.py  test_build_loop.py  test_capability_audit.py  test_cli_guard.py  test_config.py  test_connection_diagnostics.py  test_debug_sequence.py  test_debug_session.py  test_diagnostics.py  test_doc_fetch.py  test_doc_repo.py  test_doctor.py  test_elf_check.py  test_factory.py  test_gdb_cleanup.py  test_gdb_parsing.py  test_gdb_recovery.py  test_hardware_identity.py  test_knowledge.py  test_local_config.py  test_mcp_config.py  test_mcp_server.py  test_mcp_smoke.py  test_nonvision_acceptance.py  test_prepare_mcu.py  test_probe_scan.py  test_profiles.py  test_public_docs.py  test_realtime_ops.py  test_replay.py  test_serial_log.py  test_skill_bootstrap.py  test_skill_install.py  test_target_validation.py  (+4 more)
(+28 files in other folders)
